[package]
name = "timezone_db"
version = "1.0.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "timezone_db"
path = "src/main.rs"

[dependencies]
#rocket_static_fs = { git = "https://github.com/DiamondMiner88/rocket_static_fs.git" }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
urlencoding = "2.1"

jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

chrono = "0.4"
chrono-tz = "0.6"
include_dir = "0.7"
lazy_static = "1.4"
thiserror = "1.0"
either = "1.7"

# Explicit dependency to compile openssl from openssl-src instead as a workaround for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }

# NOTE: forced to use the pr which uses sqlx 0.6 until merged + rocket_db_pools is updated
# https://github.com/SergioBenitez/Rocket/pull/2242

[dependencies.rocket]
#version = "0.5.0-rc.2"
git = "https://github.com/pintariching/Rocket.git"
features = ["json"]

[dependencies.rocket_db_pools]
#version = "0.1.0-rc.2"
git = "https://github.com/pintariching/Rocket.git"
default-features = false
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"]
