[package]
name = "timezone_db"
version = "1.0.0"
edition = "2021"
publish = false
build = "build.rs"

[[bin]]
name = "timezone_db"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0", features = ["derive"] }
serde_urlencoded = "0.7"
urlencoding = "2.1"

jwt = "0.16"
hmac = "0.12"
sha2 = "0.10"

chrono = "0.4"
chrono-tz = "0.9"
include_dir = "0.7"
lazy_static = "1.4"
thiserror = "1.0"
either = "1.7"

# Override transitive dependency on openssl to compile from src targeting MUSL instead
# perl is needed on the PATH in order to compile
openssl = { version = "0.10", features = ["vendored"] }

[dependencies.rocket]
version = "0.5"
features = ["json"]

[dependencies.rocket_db_pools]
version = "0.2"
default-features = false
features = ["sqlx_postgres"]

[dependencies.sqlx]
version = "0.7"
default-features = false
features = ["runtime-tokio-rustls", "postgres", "macros", "migrate"]
